[package]
name = "rust_mirror"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_mirror"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
serde = { version = "1.0.147", features = ["derive"]}